Quick fixes in "function" classes
Signed-off-by: currantw <taylor.curran@improving.com>